img overflow fix

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -974,6 +974,10 @@ div.icon-menu {
             img {
                 display: none;
             }
+
+            i.icon-arrow_wide {
+                color: transparent;
+            }
         }
     }
 
@@ -1067,7 +1071,10 @@ div.icon-menu {
                     box-shadow: 0px 0px 60px 45px var(--blue-clouds),
                         inset 0px 0px 75px 20px var(--blue-clouds);
 
-
+                    img {
+                        width: 62px;
+                        height: 62px;
+                    }
                 }
 
                 &:hover {
@@ -4066,7 +4073,7 @@ body>section.tabs>div.tabs-content>div:nth-child(2)>div>div.count-n-card>div.rec
         img {
             width: auto;
             height: auto;
-            max-height: 900px;
+            max-height: 820px;
             border-radius: 10px;
         }
 
